Fix or add tests for native images